// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/shared/labelWithTooltip matches snapshot when not tooltip specified 1`] = `
<div
  className="labelWithTooltip"
>
  <Label
    weight="semibold"
  >
    labelText
  </Label>
</div>
`;

exports[`components/shared/labelWithTooltip matches snapshot when tooltip specified 1`] = `
<div
  className="labelWithTooltip"
>
  <Label
    weight="semibold"
  >
    labelText
  </Label>
  <Tooltip
    content="calloutText"
    positioning="after"
    relationship="description"
  >
    <Button
      appearance="subtle"
      aria-label="More information"
      icon={<InfoRegular />}
    />
  </Tooltip>
</div>
`;
